--- a/frankenflow/static/css/custom.css
+++ b/frankenflow/static/css/custom.css
@@ -4,21 +4,57 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-/* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
+html, body {
+   height: 100%;
+}
+
+#main-container {
+    height: calc(100% - 50px);
+}
+
+.full-height {
+    height: 100%;
+}
 
 body {
-    margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    /*margin-top: 50px; !* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. *!*/
     background: url(../images/background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    color: rgb(200, 200, 200);
+    color: rgb(20, 20, 20);
 }
 
 .navbar {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(20, 20, 20);
     border-width: 0px;
+    box-shadow: 0px 0px 15px 0px #2c2c2c;
+    margin-bottom: 0px;
+}
+
+#control-center {
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: rgb(200, 200, 200);
+    box-shadow: 0px 0px 15px 0px #2c2c2c;
+    height: 32px;
+}
+
+#status-block {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-bottom: 0px;
+    background-color: rgb(230, 230, 230);
+    font-size: small;
+    font-color: rgba(50, 50, 50);
+    height: 23px;
+}
+
+#main_content {
+    height: calc(100% - 55px);
+    padding: 10px
 }
 
 /*The error message bar that is shown if something goes wrong!*/
@@ -35,4 +71,14 @@ body {
     -webkit-box-shadow: 0 0 5px black;
     -moz-box-shadow: 0 0 5px black;
     box-shadow: 0 0 5px black;
+}
+
+#node_detail {
+    height: 100% !important;
+    overflow: scroll;
+}
+
+#graph_plot {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
 }
