--- a/frankenflow/static/css/custom.css
+++ b/frankenflow/static/css/custom.css
@@ -76,10 +76,19 @@ body {
 
 #node_detail {
     height: 100% !important;
-    overflow: scroll;
+    overflow: auto;
+    font-size:small;
+    background-color: white;
+    border-radius: 0px;
+    padding: 5px;
 }
 
 #graph_plot {
     background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 10px;
+    border-radius: 0px;
+}
+
+/*Decrease tab width in the json view*/
+.jsonview ul .obj {
+    margin: 0 0 0 1em;
 }
