--- a/frankenflow/static/css/custom.css
+++ b/frankenflow/static/css/custom.css
@@ -5,7 +5,7 @@
  */
 
 html, body {
-   height: 100%;
+    height: 100%;
 }
 
 #main-container {
@@ -14,23 +14,39 @@ html, body {
 
 .full-height {
     height: 100%;
+    padding: 0px;
 }
 
 body {
     /*margin-top: 50px; !* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. *!*/
-    background: url(../images/background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
     color: rgb(20, 20, 20);
+    background: #092756;
+    background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -moz-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -moz-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -webkit-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -webkit-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -o-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -o-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), -ms-linear-gradient(top, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), -ms-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+    background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104, 128, 138, .4) 10%, rgba(138, 114, 76, 0) 40%), linear-gradient(to bottom, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%), linear-gradient(135deg, #670d10 0%, #092756 100%);
 }
 
 .navbar {
-    background-color: rgb(20, 20, 20);
     border-width: 0px;
     box-shadow: 0px 0px 15px 0px #2c2c2c;
     margin-bottom: 0px;
+    background: #282537;
+    background-image: -webkit-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
+    background-image: -moz-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
+    background-image: -o-radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
+    background-image: radial-gradient(top, circle cover, #3c3b52 0%, #252233 80%);
+}
+
+.navbar-brand {
+    color: white !important;
+    opacity: 0.6;
+    font-weight: 900;
 }
 
 #control-center {
@@ -40,6 +56,7 @@ body {
     background-color: rgb(200, 200, 200);
     box-shadow: 0px 0px 15px 0px #2c2c2c;
     height: 32px;
+    background-image: linear-gradient(328deg, #959ea9, #aea593);
 }
 
 #status-block {
@@ -55,7 +72,7 @@ body {
 
 #main_content {
     height: calc(100% - 55px);
-    padding: 10px
+    padding: 0px
 }
 
 /*The error message bar that is shown if something goes wrong!*/
@@ -77,10 +94,10 @@ body {
 #node_detail {
     height: 100% !important;
     overflow: auto;
-    font-size:small;
-    background-color: white;
+    font-size: small;
     border-radius: 0px;
     padding: 5px;
+    background-color: #272822;
 }
 
 #graph_plot {
